--- a/wp-content/themes/new-school/src/markup/blocks/base/main.scss
+++ b/wp-content/themes/new-school/src/markup/blocks/base/main.scss
@@ -27,6 +27,7 @@
   --blue-color: #2331b5;
   --font-calibri: 'Calibri', sans-serif;
   --font-manrope: 'Manrope', sans-serif;
+  --error-color: #ff0000;
 }
 
 *,
