--- a/wp-content/themes/new-school/src/markup/blocks/group-numbers/group-numbers.scss
+++ b/wp-content/themes/new-school/src/markup/blocks/group-numbers/group-numbers.scss
@@ -7,13 +7,21 @@
 .group-numbers {
   padding-top: 80px;
 
+  @include tablet-big-screen {
+    padding-top: 40px;
+  }
+
   &__title {
     margin-bottom: 50px;
+
+    @include tablet-big-screen {
+      margin-bottom: 30px;
+    }
   }
 
   &__items {
     display: grid;
-    grid-gap: 1.8vw;
+    grid-gap: 20px;
 
     &--1 {
       grid-template-columns: repeat(1, 1fr)
@@ -55,22 +63,39 @@
       grid-template-columns: repeat(10, 1fr)
     }
 
+    @include tablet-big-screen {
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 10px;
+    }
+
   }
 
   &__item {
     box-shadow: 0 0 13px -4px rgba(0, 0, 0, .3);
     text-align: center;
     padding: 15px;
+
+    @include tablet-big-screen {
+      padding: 5px;
+    }
   }
 
   &__item-number {
     @include font-manrope;
     font-size: 70px;
     font-weight: 700;
+
+    @include tablet-big-screen {
+      font-size: 30px;
+    }
   }
 
   &__item-text {
     @include font-calibri;
     font-size: 25px;
+
+    @include tablet-big-screen {
+      font-size: 14px;
+    }
   }
 }
