--- a/wp-content/themes/new-school/src/markup/blocks/img-text-block/img-text-block.scss
+++ b/wp-content/themes/new-school/src/markup/blocks/img-text-block/img-text-block.scss
@@ -11,11 +11,19 @@
 
   &__title {
     margin-bottom: 25px;
+
+    @include tablet-big-screen {
+      margin-bottom: 10px;
+    }
   }
 
   &__item {
     display: grid;
     grid-template-columns: 7fr 6fr;
+
+    @include tablet-big-screen {
+      display: block;
+    }
   }
 
   &__item-desc {
@@ -25,6 +33,11 @@
     @include font-calibri;
     font-size: 28px;
     margin-bottom: 25px;
+
+    @include tablet-big-screen {
+      font-size: 18px;
+      margin-bottom: 15px;
+    }
   }
 
   &__button {
@@ -35,10 +48,19 @@
     font-size: 28px;
     padding: 7px 40px;
     width: fit-content;
+
+    @include tablet-big-screen {
+      padding: 10px 20px;
+      font-size: 18px;
+    }
   }
 
   &__img-wrapper {
     width: 100%;
+
+    @include tablet-big-screen {
+      display: none;
+    }
   }
 
   &__img {
