--- a/wp-content/themes/new-school/src/markup/blocks/img-block/img-block.scss
+++ b/wp-content/themes/new-school/src/markup/blocks/img-block/img-block.scss
@@ -34,10 +34,11 @@
     position: relative;
     z-index: 1;
     padding-top: 84px;
-    height: calc(100vh - 150px);
+    height: calc(100vh - 350px);
 
     #{$small} & {
-      padding-top: 15px;
+      padding-top: 150px;
+      height: calc(100vh - 150px);
     }
   }
 
@@ -74,11 +75,10 @@
     background: var(--green-color);
     color: var(--white-color);
     position: absolute;
-    bottom: 0;
+    bottom: -58px;
     right: -15px;
     font-size: 34px;
     padding: 35px 121px;
-    transform: translateY(50%);
 
     @include tablet-big-screen {
       padding: 10px 20px;
@@ -101,6 +101,12 @@
   }
 
   &__geometry {
+    position: relative;
+
+    #{$small} & {
+      transform: translateY(-30vh);
+    }
+
     @include tablet-big-screen {
       display: none;
     }
@@ -111,15 +117,30 @@
     position: absolute;
     opacity: .5;
 
+
+    @keyframes rotate {
+      0% {
+        transform: rotate(0);
+      }
+      50% {
+        transform: rotate(180deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+
     &--1 {
       width: 172px;
       height: 132px;
       right: 267px;
-      top: 15vh;
+      top: -15vh;
       mask: url(../../../../images/triangle.svg);
       -webkit-mask: url(../../../../images/triangle.svg);
       @include mask-contain-center();
       transform: rotate(-18deg);
+      animation: rotate 50s linear;
 
       #{$small} & {
         right: 90px;
@@ -131,11 +152,12 @@
       width: 120px;
       height: 120px;
       right: 82px;
-      top: 36vh;
+      top: 0vh;
       mask: url(../../../../images/plus.svg);
       -webkit-mask: url(../../../../images/plus.svg);
       @include mask-contain-center();
       transform: rotate(-13deg);
+      animation: rotate 60s linear;
 
       #{$small} & {
         right: 4px;
@@ -147,16 +169,20 @@
       width: 95px;
       height: 95px;
       right: 415px;
-      top: 45vh;
+      top: 15vh;
       mask: url(../../../../images/square.svg);
       -webkit-mask: url(../../../../images/square.svg);
       @include mask-contain-center();
       transform: rotate(17deg);
+      animation: rotate 70s linear;
 
       #{$small} & {
         right: 609px;
         top: 40vh;
       }
     }
+
+    transform-origin: center;
+    animation-iteration-count: infinite;
   }
 }
